# the-chat-survivor

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  README.md  api_test.py  debate_experiment.py  listAvailableAPIModels.py  main.py  pyproject.toml  read_log.py  server.py
agents/: abstract_agentic_player.py  agentic_player.py  base_agent.py  game_host.py  human_player.py  player.py  player_models.py  player_response_models.py  system_prompt.py
core/: api_client.py  api_client_setup.py  backend_config.py  bootstrap.py  game_config.py  gameboard.py  phase_runner.py  run_terminal.py  sanitize.py  shared_helpers.py  shared_web_game_functionality.py  simulation_engine.py
core/api_client/: __init__.py  (+3 more)
demo_runner/: demo_runner.py  fixture_directory.py  game_module_directory.py  game_setup.py
frontend/: README.md  index.html  package-lock.json  package.json
gameplay_management/: base_manager.py  turn_manager.py
mcp_service/: README.md  core.py  server.py
models/: __init__.py  player_models.py
persona_mcp/: README.md  server.py
prompts/: gamePrompts.py  prompts.py  votePrompts.py
runtime_tests/: backfill_daily_token_log.py  demo_runner.py  game_setup.py  generate_fixture.py  listAvailableAPIModels.py  run_test_game.py  run_test_game_2.py  run_test_pd_finale.py  run_test_reunion.py  run_test_reunion_real.py  run_test_reunion_real_3.py  scratch_call.py  scratch_summary_call.py  test_character_generation.py  test_character_generation_consistency.py
web/: rate_limits.py  server.py  server_config.py  server_helpers.py  ws_demo.py  ws_game.py  ws_replay.py
(+160 files in other folders)
