[project]
name = "my-llm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.62.0",
    "instructor>=1.14.5",
    "jsonref>=1.1.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "websockets>=11.0",
    "python-multipart>=0.0.22",
    "mcp[cli]>=1.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
[tool.pytest.ini_options]
pythonpath = [
  "."
]
